# HTTPSServer

./: README.md  Readme.txt
client/: CMakeLists.txt  HTTPGetRequest.cpp  HTTPGetRequest.hpp  client.cpp  server.crt
server/: CMakeLists.txt  dh2048.pem  server.cpp  server.csr  server.key  server.key.secure
server/helper/: request_handler.cpp  request_parser.cpp  request_parser.hpp
